# rsomics-bed-len

./: Cargo.toml  README.md
benches/: bed_len.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: bed-len.upstream.expected  input.bed
