[package]
name = "rsomics-bed-len"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Append interval length (end - start) as a new column to BED records"
repository = "https://github.com/omics-rust/rsomics-bed-len"
readme = "README.md"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "length", "bioinformatics", "genomics"]

[[bin]]
name = "rsomics-bed-len"
path = "src/main.rs"

[lib]
name = "rsomics_bed_len"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bed_len"
harness = false
